--- a/app/src/main/res/layout/fragment_account_bind.xml
+++ b/app/src/main/res/layout/fragment_account_bind.xml
@@ -120,14 +120,14 @@
                 android:maxLength="@integer/password_maxlenght"/>
 
         </LinearLayout>
-
+        <ImageView style="@style/style_divider_horizontal_light"/>
         <LinearLayout
             android:id="@+id/ll_container_sure_password"
             style="@style/style_edit_white_container">
 
             <TextView
                 style="@style/style_bind_account_text"
-                android:text="@string/duplicate_password"/>
+                android:text="@string/sure_password"/>
 
             <com.zhiyicx.baseproject.widget.edittext.PasswordEditText
                 android:id="@+id/et_sure_password"
