--- a/app/src/main/res/layout/fragment_my_team.xml
+++ b/app/src/main/res/layout/fragment_my_team.xml
@@ -7,13 +7,18 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp40"
         android:layout_margin="@dimen/dp20"
         android:background="@drawable/shape_qr_code_bg"
         android:orientation="horizontal"
-        android:padding="@dimen/dp10">
+       >
 
-        <Spinner
+        <TextView
+            android:textColor="@color/black_deep"
+            android:textSize="@dimen/sp16"
+            android:layout_marginRight="@dimen/dp10"
+            android:drawableRight="@mipmap/dowm_triangle_icon"
+            android:gravity="center"
             android:id="@+id/sp_team_spinner"
             android:layout_width="@dimen/dp120"
             android:layout_height="match_parent"/>
@@ -21,8 +26,10 @@
             style="@style/style_divider_veitical"
             android:layout_marginRight="@dimen/dp10" />
         <TextView
+            android:gravity="center"
+            android:id="@+id/tv_my_total"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="我的总资产：0BCB"
             android:textColor="@color/black_deep"
             android:textSize="@dimen/sp16" />
