--- a/app/src/main/res/layout/item_currency.xml
+++ b/app/src/main/res/layout/item_currency.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:background="@color/white"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tv_currency_name"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:text="aaaa"
+        android:textSize="@dimen/sp16"
+        android:textColor="@color/black_deep"
+        android:paddingTop="@dimen/dp10"
+        android:paddingBottom="@dimen/dp10"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
 </LinearLayout>
