--- a/app/src/main/res/layout/fragment_withdraw_currency.xml
+++ b/app/src/main/res/layout/fragment_withdraw_currency.xml
@@ -96,6 +96,7 @@
             android:textColor="@color/black_deep"/>
 
         <EditText
+            android:id="@+id/et_num"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
