修改注册和绑定手机邀请码提示，用户名校驗

--- a/app/src/main/res/layout/fragment_account_management.xml
+++ b/app/src/main/res/layout/fragment_account_management.xml
@@ -23,10 +23,11 @@
 
         <!--绑定邮箱-->
         <com.zhiyicx.baseproject.widget.button.CombinationButton
+
             android:id="@+id/bt_bind_email"
             android:layout_width="match_parent"
             android:layout_height="@dimen/full_button_height"
-            android:visibility="visible"
+            android:visibility="gone"
             app:leftText="@string/account_bind_email"
             app:leftTextLeftPadding="@dimen/spacing_mid"
             app:rightImage="@mipmap/ic_arrow_smallgrey"/>
