--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.wcy.overscroll.OverScrollLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.wcy.overscroll.OverScrollLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/overscroll"
     android:layout_width="match_parent"
@@ -24,26 +23,26 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:visibility="gone"
-                    style="@style/style_edit_white_container">
+                    style="@style/style_edit_white_container"
+                    android:visibility="gone">
 
                     <TextView
                         style="@style/style_small_text"
-                        android:text="@string/username"/>
+                        android:text="@string/username" />
 
                     <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                         android:id="@+id/et_regist_username"
                         style="@style/style_edit"
-                        app:need_word_byte_limit="true"
-                        app:word_byte_limit_lengh="@integer/username_max_byte_length"
                         android:layout_marginLeft="0dp"
                         android:hint="@string/username_input_hint"
-                        android:inputType="textPersonName"/>
+                        android:inputType="textPersonName"
+                        app:need_word_byte_limit="true"
+                        app:word_byte_limit_lengh="@integer/username_max_byte_length" />
                 </LinearLayout>
 
                 <ImageView
-                    android:visibility="gone"
-                    style="@style/style_divider_horizontal_light"/>
+                    style="@style/style_divider_horizontal_light"
+                    android:visibility="gone" />
 
                 <RelativeLayout style="@style/style_edit_white_container">
 
@@ -59,7 +58,7 @@
 
                             <TextView
                                 style="@style/style_small_text"
-                                android:text="@string/phone_number"/>
+                                android:text="@string/phone_number" />
 
                             <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                                 android:id="@+id/et_regist_phone"
@@ -67,7 +66,7 @@
                                 android:layout_marginLeft="0dp"
                                 android:hint="@string/phone_number_input_hint"
                                 android:inputType="phone"
-                                android:maxLength="@integer/phone_number_length"/>
+                                android:maxLength="@integer/phone_number_length" />
                         </LinearLayout>
 
                         <!--邮箱注册-->
@@ -76,8 +75,8 @@
                             style="@style/style_edit_white_container">
 
                             <TextView
-                                style="@style/style_small_text"
-                                android:text="@string/email_address"/>
+                                style="@style/style_bind_account_text"
+                                android:text="@string/email_address" />
 
                             <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                                 android:id="@+id/et_register_email"
@@ -85,7 +84,7 @@
                                 android:layout_marginLeft="0dp"
 
                                 android:hint="@string/email_address_input_hint"
-                                android:inputType="textEmailAddress"/>
+                                android:inputType="textEmailAddress" />
                         </LinearLayout>
 
                     </FrameLayout>
@@ -98,8 +97,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:paddingLeft="@dimen/spacing_mid"
-                        android:paddingRight="@dimen/spacing_mid"
-                        >
+                        android:paddingRight="@dimen/spacing_mid">
 
                         <TextView
                             android:id="@+id/bt_regist_send_vertify_code"
@@ -114,7 +112,7 @@
                             android:minWidth="@dimen/button_send_vertify_code_min_width"
                             android:text="@string/send_vertify_code"
                             android:textColor="@color/selector_text_color"
-                            android:textSize="@dimen/size_content"/>
+                            android:textSize="@dimen/size_content" />
 
                         <ImageView
                             android:id="@+id/iv_vertify_loading"
@@ -122,20 +120,19 @@
                             android:layout_height="@dimen/icon_for_assist_small"
                             android:layout_centerInParent="true"
                             android:src="@drawable/frame_loading_grey"
-                            android:visibility="invisible"
-                            />
+                            android:visibility="invisible" />
                     </RelativeLayout>
 
 
                 </RelativeLayout>
 
-                <ImageView style="@style/style_divider_horizontal_light"/>
+                <ImageView style="@style/style_divider_horizontal_light" />
 
                 <LinearLayout style="@style/style_edit_white_container">
 
                     <TextView
-                        style="@style/style_small_text"
-                        android:text="@string/vertify_code"/>
+                        style="@style/style_bind_account_text"
+                        android:text="@string/vertify_code" />
 
                     <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                         android:id="@+id/et_regist_vertify_code"
@@ -144,17 +141,16 @@
 
                         android:hint="@string/vertify_code_input_hint"
                         android:inputType="number"
-                        android:maxLength="@integer/vertiry_code_lenght"/>
+                        android:maxLength="@integer/vertiry_code_lenght" />
                 </LinearLayout>
 
-                <ImageView style="@style/style_divider_horizontal_light"/>
+                <ImageView style="@style/style_divider_horizontal_light" />
 
-                <LinearLayout
-                    style="@style/style_edit_white_container">
+                <LinearLayout style="@style/style_edit_white_container">
 
                     <TextView
-                        style="@style/style_small_text"
-                        android:text="@string/password"/>
+                        style="@style/style_bind_account_text"
+                        android:text="@string/password" />
 
                     <com.zhiyicx.baseproject.widget.edittext.PasswordEditText
                         android:id="@+id/et_regist_password"
@@ -163,44 +159,68 @@
 
                         android:hint="@string/password_input_hint"
                         android:inputType="textPassword"
-                        android:maxLength="@integer/password_maxlenght"/>
+                        android:maxLength="@integer/password_maxlenght" />
 
                 </LinearLayout>
-                <ImageView style="@style/style_divider_horizontal_light"/>
-                <LinearLayout
-                    style="@style/style_edit_white_container">
+
+                <ImageView style="@style/style_divider_horizontal_light" />
+
+
+                <LinearLayout style="@style/style_edit_white_container">
 
                     <TextView
-                        style="@style/style_small_text"
-                        android:text="@string/invitation_code"/>
+                        style="@style/style_bind_account_text"
+                        android:text="@string/sure_password" />
+
+                    <com.zhiyicx.baseproject.widget.edittext.PasswordEditText
+                        android:id="@+id/et_sure_password"
+                        style="@style/style_passward_edit"
+                        android:layout_marginLeft="0dp"
+
+                        android:hint="@string/password_input_hint_v2"
+                        android:inputType="textPassword"
+                        android:maxLength="@integer/password_maxlenght" />
+
+                </LinearLayout>
+
+                <ImageView style="@style/style_divider_horizontal_light" />
+
+                <LinearLayout style="@style/style_edit_white_container">
+
+                    <TextView
+                        style="@style/style_bind_account_text"
+                        android:text="@string/invitation_code" />
 
                     <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                         android:id="@+id/et_invite_code"
                         style="@style/style_passward_edit"
                         android:layout_marginLeft="0dp"
+                        android:layout_weight="1"
+                        android:hint="@string/input_invitation_code_v2"
 
-                        android:hint="@string/input_invitation_code"
+                        android:maxLength="@integer/password_maxlenght" />
 
-                        android:maxLength="@integer/password_maxlenght"/>
-
+                    <TextView
+                        style="@style/style_small_text"
+                        android:text="@string/invitation_code_hint"
+                        android:textColor="@color/themeColor"
+                        android:visibility="gone" />
                 </LinearLayout>
 
-                <include
-                    layout="@layout/include_error_tip_text"/>
+                <include layout="@layout/include_error_tip_text" />
 
                 <com.zhiyicx.baseproject.widget.button.LoadingButton
                     android:id="@+id/bt_regist_regist"
                     style="@style/style_login_button"
                     android:layout_marginTop="@dimen/button_login_margin_top"
                     android:enabled="false"
-                    app:text="@string/regist"/>
+                    app:text="@string/regist" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/spacing_mid"
-                    android:layout_marginRight="@dimen/spacing_mid"
-                    >
+                    android:layout_marginRight="@dimen/spacing_mid">
                     <!--随便逛逛-->
                     <TextView
                         android:id="@+id/tv_look_around"
@@ -211,8 +231,7 @@
                         android:text="@string/no_login"
                         android:textColor="@color/normal_for_assist_text"
                         android:textSize="@dimen/size_content_comment"
-                        android:visibility="gone"
-                        />
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
@@ -225,8 +244,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
-            android:padding="@dimen/spacing_large"
-            />
+            android:padding="@dimen/spacing_large" />
     </FrameLayout>
 
 </com.wcy.overscroll.OverScrollLayout>
