--- a/baseproject/src/main/res/values/styles_tsp_view.xml
+++ b/baseproject/src/main/res/values/styles_tsp_view.xml
@@ -45,6 +45,16 @@
         <item name="android:textColor">@color/important_for_content</item>
         <item name="android:paddingRight">@dimen/spacing_mid</item>
     </style>
+    <!-- 登录注册输入框-->
+    <style name="style_edit_wrap" parent="style_edit_cursor">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_normal</item>
+        <item name="android:background">@null</item>
+        <item name="android:textSize">@dimen/size_content</item>
+        <item name="android:textColor">@color/important_for_content</item>
+        <item name="android:paddingRight">@dimen/spacing_mid</item>
+    </style>
     <!-- 密码输入框-->
     <style name="style_passward_edit" parent="style_edit">
         <item name="android:maxLength">@integer/password_maxlenght</item>
