--- a/app/src/main/res/layout/fragment_recharge_currency.xml
+++ b/app/src/main/res/layout/fragment_recharge_currency.xml
@@ -8,6 +8,7 @@
     android:gravity="center_horizontal">
 
     <TextView
+        android:id="@+id/tv_address"
         android:layout_marginTop="@dimen/dp36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
