--- a/app/src/main/res/layout/fragment_withdraw_currency.xml
+++ b/app/src/main/res/layout/fragment_withdraw_currency.xml
@@ -9,32 +9,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp45"
-        android:gravity="bottom"
         android:paddingBottom="@dimen/dp6">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="接收地址："
             android:textSize="@dimen/sp16"
+            android:gravity="bottom"
             android:textColor="@color/black_deep"/>
 
         <EditText
             android:id="@+id/et_address"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@null"
             android:textSize="@dimen/sp13"
+            android:gravity="bottom"
             android:textColorHint="@color/gray_normal"
             android:textColor="@color/black_deep"
             android:hint="请输入..."/>
         
         <ImageView
             android:id="@+id/iv_address"
-            android:layout_width="@dimen/dp18"
-            android:layout_height="@dimen/dp18"
-            android:scaleType="centerInside"
+            android:paddingLeft="@dimen/dp10"
+            android:paddingRight="@dimen/dp10"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:scaleType="fitEnd"
             android:src="@mipmap/icon_contract_book"/>
         
     </LinearLayout>
@@ -45,13 +48,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp45"
-        android:gravity="bottom"
         android:paddingBottom="@dimen/dp6">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="地址标签："
+            android:gravity="bottom"
             android:textSize="@dimen/sp16"
             android:textColor="@color/black_deep"/>
 
@@ -59,7 +62,8 @@
             android:id="@+id/et_tag"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
             android:background="@null"
             android:textSize="@dimen/sp13"
             android:textColorHint="@color/gray_normal"
@@ -72,7 +76,8 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
             android:text="添加为常用地址"
             android:textSize="@dimen/sp13"/>
 
@@ -104,7 +109,8 @@
             android:textSize="@dimen/sp13"
             android:textColorHint="@color/gray_normal"
             android:textColor="@color/black_deep"
-            android:hint="请输入..."/>
+            android:hint="请输入..."
+            android:inputType="numberDecimal"/>
 
         <TextView
             android:layout_width="wrap_content"
