--- a/app/src/main/res/layout/item_currency_balance.xml
+++ b/app/src/main/res/layout/item_currency_balance.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp160"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/white">
 
@@ -11,17 +12,19 @@
         android:layout_height="@dimen/dp25">
 
         <ImageView
+            android:id="@+id/iv_icon"
             android:layout_marginLeft="@dimen/dp16"
             android:layout_width="@dimen/dp25"
             android:layout_height="@dimen/dp25"
             android:background="@color/themeColor"/>
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/dp50"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BCB"
+            tools:text="xxx"
             android:textColor="@color/black_deep"/>
 
         <TextView
@@ -49,9 +52,10 @@
             android:gravity="center">
 
             <TextView
+                android:id="@+id/tv_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0.000000"
+                android:text="0.0000000000"
                 android:textColor="@color/gray_normal"
                 android:textSize="@dimen/sp16"/>
 
@@ -72,9 +76,10 @@
             android:gravity="center">
 
             <TextView
+                android:id="@+id/tv_frezz"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0.000000"
+                android:text="0.0000000000"
                 android:textColor="@color/gray_normal"
                 android:textSize="@dimen/sp16"/>
 
