--- a/app/src/main/res/layout/fragment_bind_old_account.xml
+++ b/app/src/main/res/layout/fragment_bind_old_account.xml
@@ -125,9 +125,12 @@
                 android:text="" />
         </LinearLayout>
 
-        <ImageView style="@style/style_divider_horizontal_light" />
+        <ImageView
+            android:visibility="gone"
+            style="@style/style_divider_horizontal_light" />
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/ll_container_sure_password"
             style="@style/style_edit_white_container">
 
