--- a/app/src/main/res/layout/item_currency_balance.xml
+++ b/app/src/main/res/layout/item_currency_balance.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp160"
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/dp160"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_marginTop="@dimen/dp30"
@@ -15,8 +15,7 @@
             android:id="@+id/iv_icon"
             android:layout_marginLeft="@dimen/dp16"
             android:layout_width="@dimen/dp25"
-            android:layout_height="@dimen/dp25"
-            android:background="@color/themeColor"/>
+            android:layout_height="@dimen/dp25"/>
 
         <TextView
             android:id="@+id/tv_name"
@@ -45,6 +44,8 @@
         android:layout_height="@dimen/dp72">
 
         <LinearLayout
+            android:paddingLeft="@dimen/dp20"
+            android:paddingRight="@dimen/dp20"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -55,7 +56,8 @@
                 android:id="@+id/tv_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0.0000000000"
+                android:text="0.00000000000"
+                android:gravity="center"
                 android:textColor="@color/gray_normal"
                 android:textSize="@dimen/sp16"/>
 
@@ -69,6 +71,8 @@
         </LinearLayout>
 
         <LinearLayout
+            android:paddingLeft="@dimen/dp20"
+            android:paddingRight="@dimen/dp20"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -98,7 +102,7 @@
         android:paddingLeft="@dimen/dp16"
         android:paddingRight="@dimen/dp16"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="@dimen/dp34">
 
         <Button
             android:id="@+id/bt_recharge"
