--- a/app/src/main/res/layout/view_my_currency_header.xml
+++ b/app/src/main/res/layout/view_my_currency_header.xml
@@ -5,6 +5,7 @@
     android:background="@color/themeColor">
 
     <TextView
+        android:id="@+id/tv_software"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="应用推荐"
