--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,6 +49,7 @@
 
     <color name="theme_not_enabled">#F27314</color>
 
+    <color name="state_currency_fail">#bebebe</color>
     <color name="state_currency_verify">#3399ff</color>
     <color name="state_currency_success">#2cdbd6</color>
     <color name="state_currency_exchange">#e07e65</color>
