--- a/app/src/main/res/layout/fragment_withdraw_currency.xml
+++ b/app/src/main/res/layout/fragment_withdraw_currency.xml
@@ -139,6 +139,7 @@
             android:textColor="@color/black_deep"/>
 
         <TextView
+            android:id="@+id/tv_transfer"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -148,6 +149,7 @@
             android:text="--"/>
 
         <TextView
+            android:id="@+id/tv_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="转账手续费（0.0%）"
