1.完成交易密码的设置，修改，找回功能

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -17,8 +17,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
             <LinearLayout
+                android:id="@+id/ll_old_pwd"
                 style="@style/style_edit_white_container">
 
                 <TextView
