--- a/app/src/main/res/layout/fragment_password_manager.xml
+++ b/app/src/main/res/layout/fragment_password_manager.xml
@@ -15,7 +15,7 @@
         android:id="@+id/bt_change_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/full_button_height"
-        app:leftText="@string/change_password"
+        app:leftText="登录密码"
         app:leftTextLeftPadding="@dimen/spacing_mid"
         app:rightImage="@mipmap/ic_arrow_smallgrey"/>
     <!--支付密码-->
