--- a/app/src/main/res/layout/view_my_currency_header.xml
+++ b/app/src/main/res/layout/view_my_currency_header.xml
@@ -31,6 +31,7 @@
             android:textSize="@dimen/sp13"/>
 
         <TextView
+            android:id="@+id/tv_year_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+ 0.00%"
