--- a/app/src/main/res/layout/dialog_exchange_currency.xml
+++ b/app/src/main/res/layout/dialog_exchange_currency.xml
@@ -16,6 +16,7 @@
         android:gravity="center">
 
         <TextView
+            android:id="@+id/tv_avaliable_balance_desc"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="ETH可用量"
@@ -68,6 +69,7 @@
         android:gravity="center">
 
         <TextView
+            android:id="@+id/tv_num_desc"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="本次兑换BCB量"
@@ -81,7 +83,9 @@
             android:gravity="right|bottom"
             android:background="@null"
             android:hint="请输入数量"
-            android:textSize="@dimen/sp13"/>
+            android:textColor="@color/black_deep"
+            android:textSize="@dimen/sp13"
+            android:inputType="numberDecimal"/>
 
     </LinearLayout>
 
@@ -95,6 +99,7 @@
         android:gravity="center">
 
         <TextView
+            android:id="@+id/tv_cost_num_desc"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="本次兑换BCB消耗ETH量"
@@ -107,6 +112,7 @@
             android:layout_height="match_parent"
             android:gravity="right|bottom"
             android:text="0.00"
+            android:textColor="@color/black_deep"
             android:textSize="@dimen/sp13"/>
 
     </LinearLayout>
@@ -136,6 +142,8 @@
             android:gravity="right|bottom"
             android:background="@null"
             android:hint="请输入验证码"
+            android:inputType="number"
+            android:textColor="@color/black_deep"
             android:textSize="@dimen/sp13"/>
 
         <TextView
@@ -166,13 +174,15 @@
             android:textSize="@dimen/sp13"/>
 
         <EditText
-            android:id="@+id/et_deal_pwd"
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="right|bottom"
             android:background="@null"
             android:hint="请输入交易密码"
-            android:textSize="@dimen/sp13"/>
+            android:textSize="@dimen/sp13"
+            android:inputType="number"
+            android:textColor="@color/black_deep"/>
 
     </LinearLayout>
 
@@ -180,6 +190,7 @@
         style="@style/style_divider_horizontal"/>
 
     <TextView
+        android:id="@+id/tv_forget_password"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dp30"
         android:text="忘记密码？"
