--- a/app/src/main/res/layout/view_my_currency_header.xml
+++ b/app/src/main/res/layout/view_my_currency_header.xml
@@ -46,6 +46,7 @@
             android:textSize="@dimen/sp9"/>
 
         <Button
+            android:id="@+id/bt_join"
             android:layout_marginTop="@dimen/dp10"
             android:layout_marginBottom="@dimen/dp10"
             android:layout_width="@dimen/dp178"
