1.修改积分名称为糖果2.修复数字资产明细分页问题

--- a/app/src/main/res/layout/fragment_integration_recharge.xml
+++ b/app/src/main/res/layout/fragment_integration_recharge.xml
@@ -44,7 +44,7 @@
                 android:paddingLeft="@dimen/spacing_mid"
                 android:textColor="@color/white"
                 android:textSize="@dimen/check_in_total_money"
-                tools:text="1元=100积分"
+                tools:text="1元=100糖果"
                 />
         </LinearLayout>
 
