修改第三方绑定流程，团队bug，咨询分享等问题

--- a/app/src/main/res/layout/fragment_complete_accouont.xml
+++ b/app/src/main/res/layout/fragment_complete_accouont.xml
@@ -32,8 +32,32 @@
         </FrameLayout>
     </LinearLayout>
 
-    <ImageView style="@style/style_divider_horizontal_light"/>
 
+    <ImageView style="@style/style_divider_horizontal_light"/>
+    <LinearLayout
+        style="@style/style_edit_white_container">
+
+        <TextView
+            style="@style/style_small_text"
+            android:text="@string/invitation_code"/>
+
+
+        <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
+            android:id="@+id/et_invite_code"
+            style="@style/style_passward_edit"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:hint="@string/input_invitation_code_v2"
+
+            android:maxLength="@integer/password_maxlenght" />
+
+        <TextView
+            style="@style/style_small_text"
+            android:text="@string/invitation_code_hint"
+            android:textColor="@color/themeColor"
+            android:visibility="gone" />
+
+    </LinearLayout>
     <!--登录异常相关提示-->
     <include
         layout="@layout/include_error_tip_text"/>
