--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -318,7 +318,7 @@
                 app:leftText="@string/team"
                 app:rightImage="@mipmap/ic_arrow_smallgrey"
                 app:showLine="true" />
-            <!--我的积分-->
+            <!--我的糖果-->
             <com.zhiyicx.baseproject.widget.button.CombinationButton
                 android:id="@+id/bt_mine_integration"
                 android:layout_width="match_parent"
