--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -154,6 +154,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginBottom="@dimen/dp40"
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
