--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,7 +64,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/important_for_content</item>
-        <item name="android:textSize">@dimen/size_icon_assist</item>
+        <item name="android:textSize">@dimen/size_content_assist</item>
         <item name="android:gravity">center</item>
         <item name="android:drawablePadding">@dimen/spacing_normal</item>
     </style>
