--- a/baseproject/src/main/res/layout/ppw_for_center_alert.xml
+++ b/baseproject/src/main/res/layout/ppw_for_center_alert.xml
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/normal_for_assist_text"
                     android:textSize="@dimen/size_content_assist"
-                    tool:text="我不要钱,控股发电技术管理经费控股发电技术管理经费的失落感更加疯狂楼市的价格轮番看电视剧管理费的角色加工费的失落感积分控股发电技术管理经费的失落感更加疯狂楼市的价格轮番看电视剧管理费的角色加工费的失落感积分的失落感更加疯狂楼市的价格轮番看电视剧管理费的角色加工费的失落感积分"/>
+                    tool:text="我不要钱,控股发电技术管理经费控股发电技术管理经费的失落感更加疯狂楼市的价格轮番看电视剧管理费的角色加工费的失落感糖果控股发电技术管理经费的失落感更加疯狂楼市的价格轮番看电视剧管理费的角色加工费的失落感糖果的失落感更加疯狂楼市的价格轮番看电视剧管理费的角色加工费的失落感糖果"/>
         </ScrollView>
 
         <View
