--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -28,15 +28,18 @@
     <dimen name="dp45">45dp</dimen>
     <dimen name="dp48">48dp</dimen>
     <dimen name="dp50">50dp</dimen>
+    <dimen name="dp54">54dp</dimen>
     <dimen name="dp56">56dp</dimen>
     <dimen name="dp60">60dp</dimen>
     <dimen name="dp62">62dp</dimen>
     <dimen name="dp66">66dp</dimen>
+    <dimen name="dp68">68dp</dimen>
     <dimen name="dp72">72dp</dimen>
     <dimen name="dp80">80dp</dimen>
     <dimen name="dp86">86dp</dimen>
     <dimen name="dp90">90dp</dimen>
     <dimen name="dp100">100dp</dimen>
+    <dimen name="dp115">115dp</dimen>
     <dimen name="dp120">120dp</dimen>
     <dimen name="dp130">130dp</dimen>
     <dimen name="dp140">140dp</dimen>
@@ -64,6 +67,7 @@
     <dimen name="sp12">12sp</dimen>
     <dimen name="sp20">20sp</dimen>
     <dimen name="sp22">22sp</dimen>
+    <dimen name="sp24">24sp</dimen>
     <dimen name="sp30">30sp</dimen>
 
 
