1.增加红包领取2.退出登录做成异步

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,4 +55,6 @@
     <color name="state_currency_exchange">#e07e65</color>
     <color name="state_currency_record_recharge">#f36021</color>
     <color name="state_currency_record_withdraw">#ff9900</color>
+
+    <color name="red_packet_text_color">#ffebd5</color>
 </resources>
