--- a/app/src/main/res/layout/view_integral_red_packet.xml
+++ b/app/src/main/res/layout/view_integral_red_packet.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/dp306"
-    android:layout_height="@dimen/dp395"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@mipmap/bg_red_packet">
 
     <LinearLayout
-        android:layout_marginTop="82dp"
+        android:layout_marginTop="190dp"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
