1.上一版本补：修复了选择资讯标签页面因快速点击导致崩溃的bug，增加钱包账本明细的币种筛选；2.更换首页图标

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,7 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/icon_for_home_bottom_text_margin"
-                    android:text="@string/message"
+                    android:text="首页"
                     android:textColor="@color/home_bottom_navigate_text_normal"
                     android:textSize="@dimen/size_note_assist" />
             </LinearLayout>
